feat: parameter parsing and request mock building
