# src/Presentation/Api/AuthServiceProvider.php
@@ -4,13 +4,25 @@ declare(strict_types=1);
 
 namespace Api\Presentation\Api;
 
-use Api\Application\Auth\Models\UserDto;
+use Api\Application\Auth\Models\User;
+use Api\Common\OAuth\Exceptions\OAuthServerException;
+use DateTimeZone;
 use Illuminate\Http\Request;
 use Illuminate\Support\ServiceProvider;
 use Illuminate\Support\Str;
+use Lcobucci\Clock\SystemClock;
+use Lcobucci\JWT\Configuration;
+use Lcobucci\JWT\Signer\Key\InMemory;
+use Lcobucci\JWT\Signer\Key\LocalFileReference;
+use Lcobucci\JWT\Signer\Rsa\Sha256;
+use Lcobucci\JWT\Validation\Constraint\SignedWith;
+use Lcobucci\JWT\Validation\Constraint\StrictValidAt;
+use Lcobucci\JWT\Validation\RequiredConstraintsViolated;
 
 final class AuthServiceProvider extends ServiceProvider
 {
+    protected Configuration $jwtConfiguration;
+
     /**
      * Register any application services.
      *
@@ -35,14 +47,21 @@ final class AuthServiceProvider extends ServiceProvider
 
         $this->app['auth']->viaRequest('api', function (Request $request) {
             if ($request->header('Authorization')) {
+                //TODO: enable or disable depending on gate trust
+
                 //Validate JWT token in Authorization by only public key
+                $this->initConfiguration();
+
+                $tokenUserParams = $this->validateAuthorization($request);
 
                 $userPrefix = config('auth.header_prefix', 'api-user-');
 
-                //Parse user model from headers
-                $userHeaders = collect($request->headers->all())->filter(function ($value, $key) use ($userPrefix) {
-                    return Str::startsWith($key, [$userPrefix]);
-                })
+                //Parse extra user fields from headers
+                $userHeadersParams = collect($request->headers->all())->filter(
+                    function ($value, $key) use ($userPrefix) {
+                        return Str::startsWith($key, [$userPrefix]);
+                    }
+                )
                     ->map(
                         fn($item) => count($item) === 1 ? explode(
                             config('auth.header_array_seperator', ','),
@@ -50,10 +69,87 @@ final class AuthServiceProvider extends ServiceProvider
                         ) : $item
                     )
                     ->map(fn($item) => count($item) === 1 ? $item[0] : $item)
-                    ->mapWithKeys(fn($item, $key) => [\Safe\mb_ereg_replace($userPrefix, "", $key) => $item]);
+                    ->mapWithKeys(fn($item, $key) => [\Safe\mb_ereg_replace($userPrefix, "", $key) => $item])
+                    ->toArray();
 
-                return new UserDto(...$userHeaders->toArray());
+                $userParams = array_merge($userHeadersParams, $tokenUserParams);
+
+                return new User(...$userParams);
             }
         });
+    }
+
+    public function initConfiguration()
+    {
+        $publicKey = $this->getPublicKey();
+        $this->jwtConfiguration = Configuration::forAsymmetricSigner(
+            new Sha256(),
+            InMemory::plainText(''),
+            $publicKey
+        );
+
+        $this->jwtConfiguration->setValidationConstraints(
+            \class_exists(StrictValidAt::class)
+                ? new StrictValidAt(new SystemClock(new DateTimeZone(\date_default_timezone_get())))
+                : new LooseValidAt(new SystemClock(new DateTimeZone(\date_default_timezone_get()))),
+            new SignedWith(
+                new Sha256(),
+                $publicKey
+            )
+        );
+    }
+
+    /**
+     * @return LocalFileReference
+     */
+    protected function getPublicKey(): LocalFileReference
+    {
+        $path = storage_path('keys/oauth-public.key');
+
+        return LocalFileReference::file($path);
+    }
+
+    /**
+     * @param Request $request
+     * @return array
+     * @throws OAuthServerException
+     */
+    public function validateAuthorization(Request $request)
+    {
+        if ($request->hasHeader('authorization') === false) {
+            throw OAuthServerException::accessDenied('Missing "Authorization" header');
+        }
+
+        $header = $request->header('authorization');
+        $jwt = \trim((string)\preg_replace('/^\s*Bearer\s/', '', $header));
+
+        try {
+            // Attempt to parse the JWT
+            $token = $this->jwtConfiguration->parser()->parse($jwt);
+        } catch (\Lcobucci\JWT\Exception $exception) {
+            throw OAuthServerException::accessDenied($exception->getMessage(), null, $exception);
+        }
+
+        try {
+            // Attempt to validate the JWT
+            $constraints = $this->jwtConfiguration->validationConstraints();
+            $this->jwtConfiguration->validator()->assert($token, ...$constraints);
+        } catch (RequiredConstraintsViolated $exception) {
+            throw OAuthServerException::accessDenied('Access token could not be verified');
+        }
+
+        $claims = $token->claims();
+
+        return [
+            'id' => $claims->get('sub'),
+            'access_token_id' => $claims,
+            'client_id' => $this->convertSingleRecordAudToString($claims->get('aud')),
+            'scopes' => $claims->get('scopes')
+        ];
+    }
+
+    protected function convertSingleRecordAudToString($aud)
+    {
+        return \is_array($aud) && \count($aud) === 1 ? $aud[0] : $aud;
     }
 }
